# contracts/openapi/api.v1.yaml
@@ -14,16 +14,16 @@ components:
       type: object
     LoginUserResponse:
       properties:
+        displayName:
+          type: string
         email:
           type: string
         userId:
           format: uuid
           type: string
-        username:
-          type: string
       required:
         - userId
-        - username
+        - displayName
         - email
       type: object
     ProblemDetails:
@@ -54,14 +54,14 @@ components:
       type: object
     RegisterUserRequest:
       properties:
+        displayName:
+          type: string
         email:
           type: string
         password:
           type: string
-        username:
-          type: string
       required:
-        - username
+        - displayName
         - email
         - password
       type: object
@@ -70,16 +70,16 @@ components:
         createdAt:
           format: date-time
           type: string
+        displayName:
+          type: string
         email:
           type: string
         userId:
           format: uuid
           type: string
-        username:
-          type: string
       required:
         - userId
-        - username
+        - displayName
         - email
         - createdAt
       type: object
