# src/Application/Users/EventHandlers/UserRegisteredEventHandler.cs
@@ -10,9 +10,9 @@ internal sealed class UserRegisteredEventHandler(ILogger<UserRegisteredEventHand
     public Task Handle(UserRegisteredEvent domainEvent, CancellationToken cancellationToken)
     {
         logger.LogInformation(
-            "UserRegistered {UserId} {Username}",
+            "UserRegistered {UserId} {DisplayName}",
             domainEvent.UserId.Value,
-            domainEvent.Username.Value);
+            domainEvent.DisplayName.Value);
 
         return Task.CompletedTask;
     }
